commit to mac